--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,22 @@
-
 .circle {
     border: 1.5px solid black;
     border-radius: 50%;
     position: absolute;
-    display: flex; 
-    justify-content: center; 
+    display: flex;
+    justify-content: center;
     align-items: center;
+}
+
+.right-half-circle {
+    border: 1px solid black;
+    border-radius: 50%;
+    position: absolute;
+    clip-path: inset(0 50% 0 0);
+}
+
+.left-half-circle {
+    border: 1px solid black;
+    border-radius: 50%;
+    position: absolute;
+    clip-path: inset(0 0 0 50%);
 }
